# manualbar

./: CMakeLists.txt  README.md
CMake/: ManualbarConfig.cmake.in
include/manualbar/: manualbar.h
src/: manualbar.cpp
